// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar renders fixed 1`] = `
.c7 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
}

.links__list .c7 {
  width: 100%;
  text-align: left;
}

.c7:focus,
.c7:hover {
  outline: 0;
}

.c8 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
}

.links__list .c8 {
  width: 100%;
  text-align: left;
}

.c8:focus,
.c8:hover {
  outline: 0;
}

.c5 {
  height: 60px;
}

.c5 .list-container {
  position: relative;
}

.c9 {
  display: none;
  background-color: rgba(255,255,255,1);
  color: rgba(0,0,15,1);
  font-weight: 400;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
  position: absolute;
  left: 0;
  top: 0;
  top: 41px;
}

.list-container--open .c9 {
  display: block;
}

.c6 {
  background-color: transparent;
  padding: 19px 16px 19px 16px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c6,
.links__list .c6 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c6:visited,
.c6:active {
  color: rgba(255,255,255,1);
}

.nav--inverted .c6:visited,
.nav--inverted .c6:active,
.links__list .c6:visited,
.links__list .c6:active {
  color: rgba(0,0,15,1) !important;
}

.c6:focus,
.c6:hover {
  outline: 0;
  background-color: rgba(38,38,38,0.1);
}

.nav--inverted .c6:focus,
.nav--inverted .c6:hover,
.links__list .c6:focus,
.links__list .c6:hover {
  background-color: #E6E6E6;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  height: 60px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 8px;
  padding-left: 16px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c2 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  height: 60px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 8px;
  padding-left: 8px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c4 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  top: 0;
  left: 0;
  right: 0;
  min-height: 60px;
  width: 100%;
  font-size: 16px;
  background-color: transparent;
  color: rgba(255,255,255,1);
  font-weight: 600;
}

.c0.nav--relative {
  position: relative;
}

.c0.nav--absolute {
  position: absolute;
}

.c0.nav--fixed {
  position: fixed;
}

.c0 .linkItem:visited {
  color: rgba(255,255,255,1);
}

.c0.nav--inverted {
  background-color: rgba(255,255,255,1);
  border-bottom: 1px solid #D1D1D1;
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c0.nav--inverted .linkItem:visited {
  color: rgba(0,0,15,1);
}

.c0.nav--overlay:after {
  content: "";
  opacity: 0.4;
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
  height: 60px;
  z-index: 4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c0.nav--fade-in {
  -webkit-animation: bcCCNc 0.3s ease-in-out;
  animation: bcCCNc 0.3s ease-in-out;
}

.c0.nav--fade-out {
  -webkit-animation: joDzUq 0.3s ease-in-out;
  animation: joDzUq 0.3s ease-in-out;
}

.c1 {
  width: 100%;
  height: 60px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  z-index: 5;
}

@media screen and (min-width:480px) {
  .c2 {
    padding-right: 12px;
    padding-left: 24px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    padding-right: 12px;
    padding-left: 12px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    padding-left: 24px;
  }
}

@media screen and (min-width:480px) {
  .c0.nav--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c0.nav--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c1 {
    margin: 0 auto;
  }
}

@media (min-width:1440px) {
  .c1 {
    padding: 0 44px;
  }
}

<nav
  className="nav--relative nav--fade-in c0"
  role="navigation"
  style={
    Object {
      "backgroundColor": null,
    }
  }
>
  <div
    className="c1"
  >
    <button
      className="c2"
      type="button"
    >
      <svg
        fill="currentcolor"
        height={20}
        viewBox="0 0 20 17"
        width={20}
      >
        <path
          d="M 0 0 H 20 V 3 H 0 z M 0 7 H 20 V 10 H 0 z M 0 14 H 20 V 17 H 0 z"
        />
      </svg>
    </button>
    Content
    <a
      className="c3 c4"
      href="http://localhost/new/"
      rel={null}
      target="_self"
    >
      Logo
    </a>
    <div
      className="links links__row c5"
      role="menubar"
    >
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <a
          className="c6 link c7"
          href="/"
          rel={null}
          role="link"
          target="_self"
        >
          Link 1
        </a>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          className="c6 link c8"
          href={null}
          role="button"
        >
          Link 2
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          className="c6 link c8"
          href={null}
          role="button"
        >
          Link 3
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="c6 link c8"
          href={null}
          role="button"
        >
          Link 4
        </button>
        <div
          className="links links__list c9"
          role="menu"
          style={
            Object {
              "minWidth": "258px",
            }
          }
        >
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c6 link c8"
              href={null}
              role="button"
            >
              Link 5
            </button>
          </span>
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c6 link c8"
              href={null}
              role="button"
            >
              Link 6
            </button>
          </span>
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c6 link c8"
              href={null}
              role="button"
            >
              Link 7 With Really Long Content 
            </button>
          </span>
        </div>
      </span>
    </div>
  </div>
</nav>
`;

exports[`NavBar renders inverted 1`] = `
.c7 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
}

.links__list .c7 {
  width: 100%;
  text-align: left;
}

.c7:focus,
.c7:hover {
  outline: 0;
}

.c5 {
  height: 60px;
}

.c5 .list-container {
  position: relative;
}

.c8 {
  display: none;
  background-color: rgba(255,255,255,1);
  color: rgba(0,0,15,1);
  font-weight: 400;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
  position: absolute;
  left: 0;
  top: 0;
  top: 41px;
}

.list-container--open .c8 {
  display: block;
}

.c6 {
  background-color: transparent;
  padding: 19px 16px 19px 16px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c6,
.links__list .c6 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c6:visited,
.c6:active {
  color: rgba(255,255,255,1);
}

.nav--inverted .c6:visited,
.nav--inverted .c6:active,
.links__list .c6:visited,
.links__list .c6:active {
  color: rgba(0,0,15,1) !important;
}

.c6:focus,
.c6:hover {
  outline: 0;
  background-color: rgba(38,38,38,0.1);
}

.nav--inverted .c6:focus,
.nav--inverted .c6:hover,
.links__list .c6:focus,
.links__list .c6:hover {
  background-color: #E6E6E6;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  height: 60px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 8px;
  padding-left: 16px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c2 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  height: 60px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 8px;
  padding-left: 8px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c4 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  top: 0;
  left: 0;
  right: 0;
  min-height: 60px;
  width: 100%;
  font-size: 16px;
  background-color: transparent;
  color: rgba(255,255,255,1);
  font-weight: 600;
}

.c0.nav--relative {
  position: relative;
}

.c0.nav--absolute {
  position: absolute;
}

.c0.nav--fixed {
  position: fixed;
}

.c0 .linkItem:visited {
  color: rgba(255,255,255,1);
}

.c0.nav--inverted {
  background-color: rgba(255,255,255,1);
  border-bottom: 1px solid #D1D1D1;
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c0.nav--inverted .linkItem:visited {
  color: rgba(0,0,15,1);
}

.c0.nav--overlay:after {
  content: "";
  opacity: 0.4;
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
  height: 60px;
  z-index: 4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c0.nav--fade-in {
  -webkit-animation: bcCCNc 0.3s ease-in-out;
  animation: bcCCNc 0.3s ease-in-out;
}

.c0.nav--fade-out {
  -webkit-animation: joDzUq 0.3s ease-in-out;
  animation: joDzUq 0.3s ease-in-out;
}

.c1 {
  width: 100%;
  height: 60px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  z-index: 5;
}

@media screen and (min-width:480px) {
  .c2 {
    padding-right: 12px;
    padding-left: 24px;
  }
}

@media screen and (min-width:480px) {
  .c4 {
    padding-right: 12px;
    padding-left: 12px;
  }
}

@media screen and (min-width:480px) {
  .c3 {
    padding-left: 12px;
    padding-right: 12px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    padding-left: 24px;
  }
}

@media screen and (min-width:480px) {
  .c0.nav--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c0.nav--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c1 {
    margin: 0 auto;
  }
}

@media (min-width:1440px) {
  .c1 {
    padding: 0 44px;
  }
}

<nav
  className="nav--relative nav--inverted nav--fade-in c0"
  role="navigation"
  style={
    Object {
      "backgroundColor": null,
    }
  }
>
  <div
    className="c1"
  >
    <button
      className="c2"
      type="button"
    >
      <svg
        fill="currentcolor"
        height={20}
        viewBox="0 0 20 17"
        width={20}
      >
        <path
          d="M 0 0 H 20 V 3 H 0 z M 0 7 H 20 V 10 H 0 z M 0 14 H 20 V 17 H 0 z"
        />
      </svg>
    </button>
    <a
      className="c3 c4"
      href="http://localhost/new/"
      rel={null}
      target="_self"
    >
      Logo
    </a>
    <div
      className="links links__row c5"
      role="menubar"
    >
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          className="c6 link c7"
          href={null}
          role="button"
        >
          Link 1
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          className="c6 link c7"
          href={null}
          role="button"
        >
          Link 2
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          className="c6 link c7"
          href={null}
          role="button"
        >
          Link 3
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="c6 link c7"
          href={null}
          role="button"
        >
          Link 4
        </button>
        <div
          className="links links__list c8"
          role="menu"
          style={
            Object {
              "minWidth": "258px",
            }
          }
        >
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c6 link c7"
              href={null}
              role="button"
            >
              Link 5
            </button>
          </span>
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c6 link c7"
              href={null}
              role="button"
            >
              Link 6
            </button>
          </span>
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c6 link c7"
              href={null}
              role="button"
            >
              Link 7 With Really Long Content 
            </button>
          </span>
        </div>
      </span>
    </div>
  </div>
</nav>
`;

exports[`NavBar renders with defaults 1`] = `
.c5 {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  border: 0;
}

.links__list .c5 {
  width: 100%;
  text-align: left;
}

.c5:focus,
.c5:hover {
  outline: 0;
}

.c3 {
  height: 60px;
}

.c3 .list-container {
  position: relative;
}

.c6 {
  display: none;
  background-color: rgba(255,255,255,1);
  color: rgba(0,0,15,1);
  font-weight: 400;
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.12);
  border-radius: 4px;
  overflow: hidden;
  position: absolute;
  left: 0;
  top: 0;
  top: 41px;
}

.list-container--open .c6 {
  display: block;
}

.c4 {
  background-color: transparent;
  padding: 19px 16px 19px 16px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c4,
.links__list .c4 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c4:visited,
.c4:active {
  color: rgba(255,255,255,1);
}

.nav--inverted .c4:visited,
.nav--inverted .c4:active,
.links__list .c4:visited,
.links__list .c4:active {
  color: rgba(0,0,15,1) !important;
}

.c4:focus,
.c4:hover {
  outline: 0;
  background-color: rgba(38,38,38,0.1);
}

.nav--inverted .c4:focus,
.nav--inverted .c4:hover,
.links__list .c4:focus,
.links__list .c4:hover {
  background-color: #E6E6E6;
}

.c8 {
  width: 24px;
  height: 24px;
  border: solid 0.5px currentColor;
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  height: 60px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 8px;
  padding-left: 16px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c2 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  height: 60px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 8px;
  padding-left: 8px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c7 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  height: 60px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding-right: 16px;
  padding-left: 8px;
  color: rgba(255,255,255,1);
  font-size: 16px;
  font-weight: 600;
}

.nav--inverted .c9 {
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c0 {
  top: 0;
  left: 0;
  right: 0;
  min-height: 60px;
  width: 100%;
  font-size: 16px;
  background-color: transparent;
  color: rgba(255,255,255,1);
  font-weight: 600;
}

.c0.nav--relative {
  position: relative;
}

.c0.nav--absolute {
  position: absolute;
}

.c0.nav--fixed {
  position: fixed;
}

.c0 .linkItem:visited {
  color: rgba(255,255,255,1);
}

.c0.nav--inverted {
  background-color: rgba(255,255,255,1);
  border-bottom: 1px solid #D1D1D1;
  color: rgba(0,0,15,1);
  font-weight: 400;
}

.c0.nav--inverted .linkItem:visited {
  color: rgba(0,0,15,1);
}

.c0.nav--overlay:after {
  content: "";
  opacity: 0.4;
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
  height: 60px;
  z-index: 4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c0.nav--fade-in {
  -webkit-animation: bcCCNc 0.3s ease-in-out;
  animation: bcCCNc 0.3s ease-in-out;
}

.c0.nav--fade-out {
  -webkit-animation: joDzUq 0.3s ease-in-out;
  animation: joDzUq 0.3s ease-in-out;
}

.c1 {
  width: 100%;
  height: 60px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  z-index: 5;
}

@media screen and (min-width:480px) {
  .c2 {
    padding-right: 12px;
    padding-left: 24px;
  }
}

@media screen and (min-width:480px) {
  .c7 {
    padding-right: 12px;
    padding-left: 12px;
  }
}

@media screen and (min-width:480px) {
  .c9 {
    padding-right: 24px;
    padding-left: 12px;
  }
}

@media screen and (min-width:480px) {
  .c0.nav--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c0.nav--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c1 {
    margin: 0 auto;
  }
}

@media (min-width:1440px) {
  .c1 {
    padding: 0 44px;
  }
}

<nav
  className="nav--relative nav--fade-in c0"
  role="navigation"
  style={
    Object {
      "backgroundColor": null,
    }
  }
>
  <div
    className="c1"
  >
    <button
      className="c2"
      type="button"
    >
      <svg
        fill="currentcolor"
        height={20}
        viewBox="0 0 20 17"
        width={20}
      >
        <path
          d="M 0 0 H 20 V 3 H 0 z M 0 7 H 20 V 10 H 0 z M 0 14 H 20 V 17 H 0 z"
        />
      </svg>
    </button>
    Content
    <div
      className="links links__row c3"
      role="menubar"
    >
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          className="c4 link c5"
          href={null}
          role="button"
        >
          Link 1
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          className="c4 link c5"
          href={null}
          role="button"
        >
          Link 2
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          className="c4 link c5"
          href={null}
          role="button"
        >
          Link 3
        </button>
      </span>
      <span
        className="list-container list-container--closed"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onTouchStart={[Function]}
        role="none"
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          className="c4 link c5"
          href={null}
          role="button"
        >
          Link 4
        </button>
        <div
          className="links links__list c6"
          role="menu"
          style={
            Object {
              "minWidth": "258px",
            }
          }
        >
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c4 link c5"
              href={null}
              role="button"
            >
              Link 5
            </button>
          </span>
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c4 link c5"
              href={null}
              role="button"
            >
              Link 6
            </button>
          </span>
          <span
            className="list-container list-container--closed"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onTouchStart={[Function]}
            role="none"
          >
            <button
              className="c4 link c5"
              href={null}
              role="button"
            >
              Link 7 With Really Long Content 
            </button>
          </span>
        </div>
      </span>
    </div>
    <button
      className="c7"
      type="button"
    >
      <svg
        fill="currentColor"
        height={21}
        viewBox="0 0 16 16"
        width={21}
      >
        <title>
          Search Icon
        </title>
        <path
          d="M11.491 6.048c0 .672-.135 1.31-.404 1.897a5.01 5.01 0 0 1-1.102 1.552 5.273 5.273 0 0 1-1.632 1.05 5.39 5.39 0 0 1-3.987 0 5.283 5.283 0 0 1-1.632-1.05 5.01 5.01 0 0 1-1.102-1.552 4.531 4.531 0 0 1-.404-1.897c0-.666.135-1.302.404-1.892.269-.592.64-1.114 1.102-1.552A5.304 5.304 0 0 1 4.366 1.56a5.207 5.207 0 0 1 1.994-.384c.706 0 1.376.13 1.993.384.62.256 1.17.607 1.632 1.045.462.438.833.96 1.102 1.552a4.54 4.54 0 0 1 .404 1.892m4.346 8.977l-4.744-4.93a6.36 6.36 0 0 0 .62-.774 5.913 5.913 0 0 0 .89-2.115 5.893 5.893 0 0 0-.004-2.346 5.543 5.543 0 0 0-.361-1.128 5.98 5.98 0 0 0-.588-1.036 6.49 6.49 0 0 0-.794-.925A6.37 6.37 0 0 0 8.794.461 6.82 6.82 0 0 0 7.61.116a6.742 6.742 0 0 0-2.5 0A6.82 6.82 0 0 0 3.925.46a6.44 6.44 0 0 0-2.064 1.313 6.491 6.491 0 0 0-.793.923 5.98 5.98 0 0 0-.588 1.036c-.16.361-.28.741-.36 1.128a5.954 5.954 0 0 0 0 2.376c.08.388.2.768.36 1.13a6.182 6.182 0 0 0 1.381 1.959c.298.288.624.544.97.764a6.44 6.44 0 0 0 2.279.894 6.77 6.77 0 0 0 3.363-.224 6.296 6.296 0 0 0 1.708-.873l4.749 4.925a.56.56 0 0 0 .215.145.701.701 0 0 0 .453.011.514.514 0 0 0 .2-.114.561.561 0 0 0 .039-.828"
        />
      </svg>
    </button>
    <button
      className="c7"
      type="button"
    >
      <div
        className="c8"
        color="currentColor"
        size={24}
      >
        <svg
          fill="currentColor"
          height={24}
          viewBox="0 0 24 24"
          width={24}
        >
          <path
            d="M16.906 17.385H6.76a.155.155 0 0 1-.117-.046.144.144 0 0 1-.046-.105 2.226 2.226 0 0 1 .085-.52c.04-.155.105-.334.192-.532.085-.192.207-.394.365-.598.208-.272.465-.515.76-.723.3-.21.646-.388 1.027-.53.384-.142.815-.25 1.282-.322.47-.073.982-.11 1.524-.11a9.93 9.93 0 0 1 1.521.11c.465.072.897.18 1.283.323a4.5 4.5 0 0 1 1.03.53c.295.207.551.45.76.722.157.203.278.404.361.598.085.196.15.376.19.532.042.153.066.276.074.368l.011.145a.148.148 0 0 1-.046.112.148.148 0 0 1-.111.046zm1.096-.375a3.127 3.127 0 0 0-.094-.503c-.051-.2-.13-.43-.236-.682a3.653 3.653 0 0 0-.466-.786 4.322 4.322 0 0 0-.823-.833 4.887 4.887 0 0 0-1.06-.623 6.279 6.279 0 0 0-.756-.279 7.297 7.297 0 0 0-.835-.2 9.947 9.947 0 0 0-.913-.12 11.923 11.923 0 0 0-1.974 0 9.71 9.71 0 0 0-.913.12 7.257 7.257 0 0 0-.838.2c-.268.08-.522.175-.755.278-.193.084-.381.18-.56.285a4.505 4.505 0 0 0-.94.731 3.957 3.957 0 0 0-.848 1.226 4.786 4.786 0 0 0-.238.683 2.891 2.891 0 0 0-.104.72c0 .303.109.565.325.781.215.216.48.325.787.325h10.145c.307 0 .571-.109.787-.325.216-.216.325-.478.325-.78 0-.014-.004-.086-.016-.218zm-8.749-5.452a3.687 3.687 0 0 1-.78-1.158 3.558 3.558 0 0 1-.285-1.417c0-.502.096-.98.286-1.421.189-.44.45-.83.779-1.159a3.736 3.736 0 0 1 1.158-.782 3.651 3.651 0 0 1 2.839 0c.44.19.83.454 1.158.782.328.33.592.719.783 1.158.19.441.288.92.288 1.422 0 .5-.097.976-.288 1.417-.191.44-.455.829-.783 1.158a3.726 3.726 0 0 1-1.158.782c-.44.192-.917.29-1.416.29-.504 0-.982-.098-1.423-.29a3.736 3.736 0 0 1-1.158-.782zm2.58-5.271c-.368 0-.72.07-1.045.21A2.712 2.712 0 0 0 9.35 7.932a2.61 2.61 0 0 0-.213 1.051c0 .37.071.721.213 1.046a2.7 2.7 0 0 0 4.387.859c.243-.243.438-.533.58-.859.142-.325.213-.677.213-1.046a2.61 2.61 0 0 0-.213-1.05 2.712 2.712 0 0 0-1.438-1.435 2.632 2.632 0 0 0-1.045-.211z"
          />
        </svg>
      </div>
    </button>
    <button
      className="c9"
      type="button"
    >
      Text Button!
    </button>
  </div>
</nav>
`;
